# 8505-a1-covertsockets

./: .gitignore  CMakeLists.txt  README.md
docs/: A00843110_BSOER_A1_Critiques.odt  DesignDocument.odt  TestDocument.ods  diagrams.zargo  diagrams.zargo~
examples/: covert_tcp.c  sending.txt
src/: ClientEndpoint.cpp  ClientEndpoint.h  Configuration.h  EndpointFactory.cpp  EndpointFactory.h  IEndpoint.cpp  IEndpoint.h  ServerEndpoint.cpp  ServerEndpoint.h  main.c  main.cpp
src/cversion/: main.c
src/endpoints/: EndpointFactory.cpp  EndpointFactory.h  IEndpoint.cpp  IEndpoint.h
src/endpoints/client/: ClientEndpoint.cpp  ClientEndpoint.h
src/endpoints/server/: ServerEndpoint.cpp  ServerEndpoint.h
src/utils/: argparser.h
